force-app/main/default/objects/Contact/fields/CP_ActiveCustomerPunctuality__c.field-meta.xml
<CustomField>
    <fullName>CP_ActiveCustomerPunctuality__c</fullName>
    <description>Puntualidad Activa del Cliente</description>
    <label>Puntualidad Activa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>