force-app/main/default/objects/Contact/fields/CP_BlockDate__c.field-meta.xml
<CustomField>
    <fullName>CP_BlockDate__c</fullName>
    <label>Fecha de Bloqueo</label>
    <type>DateTime</type>
</CustomField>