force-app/main/default/objects/Contact/fields/CP_BlockedChatYalo__c.field-meta.xml
<CustomField>
    <fullName>CP_BlockedChatYalo__c</fullName>
    <formula>TEXT( CP_ReasonBlocking__c) != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bloqueado Chat Yalo?</label>
    <type>Checkbox</type>
</CustomField>