force-app/main/default/objects/Contact/fields/CP_BlockingComments__c.field-meta.xml
<CustomField>
    <fullName>CP_BlockingComments__c</fullName>
    <label>Comentarios de Bloqueo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>