force-app/main/default/objects/Contact/fields/CP_ClientCreditNumber__c.field-meta.xml
<CustomField>
    <fullName>CP_ClientCreditNumber__c</fullName>
    <formula>Account.CP_WalletCustomerNumberTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Cliente Crédito</label>
    <type>Text</type>
</CustomField>