force-app/main/default/objects/Contact/fields/CP_CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CP_CustomerReference__c</fullName>
    <description>Muestra el nombre de la persona que el cliente agregó como referencia</description>
    <label>Referencia de Cliente</label>
    <length>120</length>
    <type>Text</type>
</CustomField>