force-app/main/default/objects/Contact/fields/CP_CustomerSpecialSituation__c.field-meta.xml
<CustomField>
    <fullName>CP_CustomerSpecialSituation__c</fullName>
    <description>Código de información especial del cliente</description>
    <label>Situación Especial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>