force-app/main/default/objects/Contact/fields/CP_DigitalCustomer__c.field-meta.xml
<CustomField>
    <fullName>CP_DigitalCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el cliente esta registrado en Coppel.com como Cliente Digital</description>
    <label>Cliente Digital</label>
    <type>Checkbox</type>
</CustomField>