force-app/main/default/objects/Contact/fields/CP_FlagYalo__c.field-meta.xml
<CustomField>
    <fullName>CP_FlagYalo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bandera Yalo</label>
    <type>Checkbox</type>
</CustomField>