force-app/main/default/objects/Contact/fields/CP_Gender__c.field-meta.xml
<CustomField>
    <fullName>CP_Gender__c</fullName>
    <description>Muestra el sexo del cliente</description>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Femenino</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Masculino</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Especificado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>