force-app/main/default/objects/Contact/fields/CP_HistoricCustomerPunctuality__c.field-meta.xml
<CustomField>
    <fullName>CP_HistoricCustomerPunctuality__c</fullName>
    <description>Puntualidad Histórica del Cliente</description>
    <label>Puntualidad Histórica</label>
    <length>1</length>
    <type>Text</type>
</CustomField>