force-app/main/default/objects/Contact/fields/CP_MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>CP_MaritalStatus__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U</fullName>
                <label>Unión Libre</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Soltero/a</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Casado/a</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Divorciado/a</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Viudo/a</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Especificado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>