force-app/main/default/objects/Contact/fields/CP_PersonEmailStatus__c.field-meta.xml
<CustomField>
    <fullName>CP_PersonEmailStatus__c</fullName>
    <description>Muestra si el email ya fue validado o confirmado</description>
    <label>Estatus correo electrónico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Válido</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Válido Confirmado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>