force-app/main/default/objects/Contact/fields/CP_PersonHomePhoneStatus__c.field-meta.xml
<CustomField>
    <fullName>CP_PersonHomePhoneStatus__c</fullName>
    <description>Muestra si el teléfono de casa ya fue validado o confirmado</description>
    <label>Estatus Telefono Casa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Válido</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Válido Confirmado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>