force-app/main/default/objects/Contact/fields/CP_PersonMobilePhoneStatus__c.field-meta.xml
<CustomField>
    <fullName>CP_PersonMobilePhoneStatus__c</fullName>
    <description>Muestra si el teléfono de celular ya fue validado o confirmado</description>
    <label>Estatus Telefono Celular</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Válido</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Válido Confirmado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>