force-app/main/default/objects/Contact/fields/CP_PersonOtherCityCode__c.field-meta.xml
<CustomField>
    <fullName>CP_PersonOtherCityCode__c</fullName>
    <description>Código de Ciudad del sistema de Cartera</description>
    <label>Código de Ciudad de Trabajo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>