force-app/main/default/objects/Contact/fields/CP_PersonOtherStateCode__c.field-meta.xml
<CustomField>
    <fullName>CP_PersonOtherStateCode__c</fullName>
    <description>Código de Estado del sistema de Cartera</description>
    <label>Código de Estado de Trabajo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>