force-app/main/default/objects/Contact/fields/CP_PreferredContactChannel__c.field-meta.xml
<CustomField>
    <fullName>CP_PreferredContactChannel__c</fullName>
    <description>Medio de contacto preferido del cliente.</description>
    <label>Medio de contacto Preferido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono Casa</fullName>
            </value>
            <value>
                <fullName>Teléfono Celular</fullName>
            </value>
            <value>
                <fullName>Teléfono Oficina</fullName>
            </value>
            <value>
                <fullName>Correo Electrónico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>