force-app/main/default/objects/Contact/fields/CP_PreferredContactHourRange__c.field-meta.xml
<CustomField>
    <fullName>CP_PreferredContactHourRange__c</fullName>
    <description>Rango horario durante el cual se puede contactar Coppel con el cliente</description>
    <label>Rango Horario Preferido de Contacto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>