force-app/main/default/objects/Contact/fields/CP_ReasonBlocking__c.field-meta.xml
<CustomField>
    <fullName>CP_ReasonBlocking__c</fullName>
    <label>Motivo de Bloqueo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OffensiveOrprankChats</fullName>
                <label>Chats ofensivos o de broma</label>
            </value>
            <value>
                <fullName>ChatsAttemptedFraud</fullName>
                <label>Chats Intento de fraude</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>