force-app/main/default/objects/Contact/fields/MX_CP_MKTP_RFC_RepresentanteLegal__c.field-meta.xml
<CustomField>
    <fullName>MX_CP_MKTP_RFC_RepresentanteLegal__c</fullName>
    <externalId>true</externalId>
    <label>RFC del Representante Legal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>