force-app/main/default/objects/Contact/fields/Precualificado__c.field-meta.xml
<CustomField>
    <fullName>Precualificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Precualificado</label>
    <type>Checkbox</type>
</CustomField>